apps/go-fiber-hello/manifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-fiber-hello
  labels:
    app: go-fiber-hello
    service: go-fiber-hello
spec:
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  selector:
    app: go-fiber-hello
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-fiber-hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-fiber-hello
      version: v1
  template:
    metadata:
      labels:
        app: go-fiber-hello
        version: v1
    spec:
      serviceAccountName: go-fiber-hello
      containers:
      - image: ghcr.io/alvgaona/go-fiber-hello:v1
        imagePullPolicy: Always
        name: go-fiber-hello
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
    name: go-fiber-hello-gateway
spec:
    selector:
      istio: ingress
    servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
      - "go-fiber-hello.example.com"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: go-fiber-hello
spec:
  hosts:
  - "go-fiber-hello.example.com"
  gateways:
  - go-fiber-hello-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        port:
          number: 3000
        host: go-fiber-hello
